[package]
name = "pawos"
version = "0.1.0"
authors = ["Paweł Trojański <pawel.trojanski@outlook.com>"]
edition = "2018"

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = "0.9.11"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.12.1"
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"]
test-success-exit-code = 33